[package]
name = "qelbus"
version = "0.1.0"
edition = "2024"

[dependencies.nostd_cow]
version = "0.1.1"
default-features = false

[dependencies.num-traits]
version = "0.2.19"
default-features = false

[dependencies.num-bigint]
version = "0.4.6"
optional = true
default-features = false

[dependencies.serde]
version = "1.0.228"
optional = true
default-features = false
features = ["derive"]

[features]
serde = ["dep:serde"]
num-bigint = ["dep:num-bigint"]
